@@ -1,13 +1,15 @@
 ;;
 ;; Sample Kahua configuration file
 ;;
-;; $Id: kahua.conf.sample,v 1.1 2003/12/11 05:39:11 nobsun Exp $
+;; $Id: kahua.conf.sample,v 1.2 2004/01/29 07:19:19 tahara Exp $
 
 (make <kahua-config>
   :sockbase             "unix:/tmp/kahua"
   :working-directory    "/var/lib/kahua"
   :static-document-path "/var/www/kahua"
   :static-document-url  "/kahua"
+  :timeout-mins         60
+  :userconf-file        "/var/lib/kahua/user.conf"
   )
 
 ;; Local variables:
