@@ -1,11 +1,12 @@
 ;;
 ;; test configuration file
-;; $Id: test.conf,v 1.2 2004/01/02 11:36:33 ko1 Exp $
+;; $Id: test.conf,v 1.3 2004/01/29 07:19:18 tahara Exp $
 
 (make <kahua-config>
   :sockbase "unix:_tmp"
   :working-directory "_work"
   :repository "./_cvs"
+  :userconf-file "testuser.conf"
   )
 
 ;; Local variables:
